# django_learn

./: .gitignore  pyproject.toml  sdfiuh.py
barbershop/: settings.py  urls.py
config/: settings.py  urls.py
core/: urls.py  views.py
core/templates/: first_template.html  train_types.html
core/templates/core/: index.html  master_detail.html  master_list.html
core/templates/masters/: detail.html  list.html
django_learn/: settings.py  urls.py
static/css/: main.css
static/js/: main.js
templates/: base.html
